--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <div class="hero__bg" aria-hidden="true"></div>
   </main>
 
-
+<ul class="blog-list">
+  <li><a href="blog-1.html">Blog 1</a></li>
+  <li><a href="blog-2.html">Blog 2</a></li>
+  <li><a href="blog-3.html">Blog 3</a></li>
+</ul>
    
 
  
